--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -16,23 +16,21 @@
         <TextView
             android:id="@+id/scriptTextView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:background="@color/colorPrimary"
             android:gravity="start"
             android:clickable="true"
             android:textColor="@color/white"
-            android:imeOptions="actionDone"
-            android:inputType="textMultiLine"
             android:textColorHint="@color/colorPrimary"
-            android:theme="@style/TextPrimary" />
+            android:theme="@style/TextPrimary"
+            android:focusable="true" />
 
     </ScrollView>
 
     <include layout="@layout/speed_control_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
