--- a/app/src/main/res/layout/script_item.xml
+++ b/app/src/main/res/layout/script_item.xml
@@ -23,10 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Video Blog script 1"
-            android:textSize="22sp"
-            android:layout_margin="2dp"
+            android:layout_margin="5dp"
             android:textStyle="bold"
-            android:theme="@style/TextPrimary" />
+            android:theme="@style/TextSecondary" />
 
         <TextView
             android:id="@+id/body"
