-- added content descriptions for accessibility support

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -14,8 +14,9 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         android:background="@color/white"
-        android:hint="Add new script..."
+        android:hint="@string/add_new_script"
         android:gravity="start"
+        android:contentDescription="@string/script_body_edit_cd"
         android:inputType="textMultiLine"
         android:imeOptions="actionDone"
         android:textColorHint="@color/colorPrimary"
