--- a/app/src/main/res/menu/menu_preview.xml
+++ b/app/src/main/res/menu/menu_preview.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_play"
         android:orderInCategory="100"
         android:icon="@drawable/ic_present"
-        android:title="Play"
+        android:title="@string/play"
+        android:contentDescription="@string/presentation_cd"
         app:showAsAction="always" />
 </menu>
