--- a/app/src/main/res/layout/options_menu.xml
+++ b/app/src/main/res/layout/options_menu.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
+    android:contentDescription="@string/option_menu_cd"
     android:orientation="vertical">
 
     <Button
@@ -13,23 +14,27 @@
         android:layout_gravity="start"
         android:drawableLeft="@drawable/ic_edit_"
         android:drawablePadding="20dp"
+        android:contentDescription="@string/create_new_script_cd"
         android:fontFamily="@font/roboto"
         android:gravity="left|center_vertical"
-        android:text="Create new script"
+        android:text="@string/create_new_script"
         android:textAllCaps="false"
-        android:textColor="@color/secondary_text" />
+        android:textColor="@color/secondary_text"
+        android:drawableStart="@drawable/ic_edit_" />
 
     <Button
         android:id="@+id/upload"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_file_upload"
+        android:drawableStart="@drawable/ic_file_upload"
         android:drawablePadding="20dp"
+        android:contentDescription="@string/upload_new_script_cd"
         android:fontFamily="@font/roboto"
         android:gravity="left|center_vertical"
-        android:text="Upload from gallery"
+        android:text="@string/upload_from_gallery"
         android:textAllCaps="false"
-        android:textColor="@color/secondary_text" />
+        android:textColor="@color/secondary_text"
+        android:drawableLeft="@drawable/ic_file_upload" />
 
 </LinearLayout>
