--- a/app/src/main/res/layout/script_item.xml
+++ b/app/src/main/res/layout/script_item.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_margin="5dp"
+    android:contentDescription="@string/script_presentation_card_cd"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -14,6 +15,7 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/time_item_cd"
             android:text="3 hours ago"
             android:layout_margin="2dp"
             android:theme="@style/TextSecondary" />
@@ -22,6 +24,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/title_item_cd"
             android:text="Video Blog script 1"
             android:layout_margin="5dp"
             android:textStyle="bold"
@@ -33,6 +36,7 @@
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:layout_margin="2dp"
+            android:contentDescription="@string/script_body_cd"
             android:text="Accused of continuing to track users' movements even when they have turned off their location history, Google is being sued in the United States for unauthorised location data collection"
             android:theme="@style/TextPrimary" />
 
