-- Fixed UI bugs and refactored code , clean up. -- added script title field.

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -9,10 +9,28 @@
     android:background="@color/white">
 
     <EditText
+        android:id="@+id/scriptTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@color/white"
+        android:hint="@string/add_new_script_title"
+        android:imeOptions="actionDone"
+        android:textColorHint="@color/colorPrimary"
+        android:theme="@style/TextPrimary"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scriptText"/>
+
+    <EditText
         android:id="@+id/scriptText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_height="@dimen/dimen_0dp"
+        android:layout_marginLeft="@dimen/dimen_20dp"
+        android:layout_marginRight="@dimen/dimen_20dp"
+        android:layout_marginBottom="@dimen/dimen_20dp"
         android:background="@color/white"
         android:hint="@string/add_new_script"
         android:gravity="start"
@@ -21,6 +39,9 @@
         android:imeOptions="actionDone"
         android:textColorHint="@color/colorPrimary"
         android:theme="@style/TextPrimary"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scriptTitle" />
 
 </android.support.constraint.ConstraintLayout>
