--- a/app/src/main/res/layout/script_item.xml
+++ b/app/src/main/res/layout/script_item.xml
@@ -28,7 +28,7 @@
             android:text="Video Blog script 1"
             android:layout_margin="5dp"
             android:textStyle="bold"
-            android:theme="@style/TextSecondary" />
+            android:theme="@style/TextPrimary"  />
 
         <TextView
             android:id="@+id/body"
