--- a/app/src/main/res/layout/script_item.xml
+++ b/app/src/main/res/layout/script_item.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/time_item_cd"
-            android:text="3 hours ago"
+            android:text="@string/_3_hours_ago"
             android:layout_margin="2dp"
             android:theme="@style/TextSecondary" />
 
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/title_item_cd"
-            android:text="Video Blog script 1"
+            android:text="@string/video_blog_script_1"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:theme="@style/TextPrimary"  />
@@ -37,7 +37,7 @@
             android:maxLines="3"
             android:layout_margin="2dp"
             android:contentDescription="@string/script_body_cd"
-            android:text="Accused of continuing to track users' movements even when they have turned off their location history, Google is being sued in the United States for unauthorised location data collection"
+            android:text="@string/accused_of_continuing_to_track_users_movements_even_when_they_have_turned_off_their_location_history_google_is_being_sued_in_the_united_states_for_unauthorised_location_data_collection"
             android:theme="@style/TextPrimary" />
 
     </LinearLayout>
