--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -15,9 +15,10 @@
         android:layout_margin="20dp"
         android:background="@color/white"
         android:hint="@string/add_new_script_title"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:textColorHint="@color/colorPrimary"
         android:theme="@style/TextPrimary"
+        android:inputType="text"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,7 +36,7 @@
         android:hint="@string/add_new_script"
         android:gravity="start"
         android:contentDescription="@string/script_body_edit_cd"
-        android:inputType="textMultiLine"
+        android:inputType="text"
         android:imeOptions="actionDone"
         android:textColorHint="@color/colorPrimary"
         android:theme="@style/TextPrimary"
