--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -36,7 +36,7 @@
         android:hint="@string/add_new_script"
         android:gravity="start"
         android:contentDescription="@string/script_body_edit_cd"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:imeOptions="actionDone"
         android:textColorHint="@color/colorPrimary"
         android:theme="@style/TextPrimary"
