-- extracting dimens and strings.

--- a/app/src/main/res/layout/options_menu.xml
+++ b/app/src/main/res/layout/options_menu.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:drawableLeft="@drawable/ic_edit_"
-        android:drawablePadding="20dp"
+        android:drawablePadding="@dimen/dimen_20dp"
         android:contentDescription="@string/create_new_script_cd"
         android:fontFamily="@font/roboto"
         android:gravity="left|center_vertical"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_file_upload"
-        android:drawablePadding="20dp"
+        android:drawablePadding="@dimen/dimen_20dp"
         android:contentDescription="@string/upload_new_script_cd"
         android:fontFamily="@font/roboto"
         android:gravity="left|center_vertical"
