--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -12,7 +12,7 @@
         android:id="@+id/scriptTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/dimen_20dp"
         android:background="@color/white"
         android:hint="@string/add_new_script_title"
         android:imeOptions="actionNext"
