--- a/app/src/main/res/layout/script_item.xml
+++ b/app/src/main/res/layout/script_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="5dp"
+    android:layout_margin="@dimen/dimen_5dp"
     android:contentDescription="@string/script_presentation_card_cd"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_margin="@dimen/dimen_15dp"
         android:orientation="vertical">
 
         <TextView
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/time_item_cd"
             android:text="@string/_3_hours_ago"
-            android:layout_margin="2dp"
+            android:layout_margin="@dimen/dimen_2dp"
             android:theme="@style/TextSecondary" />
 
         <TextView
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/title_item_cd"
             android:text="@string/video_blog_script_1"
-            android:layout_margin="5dp"
+            android:layout_margin="@dimen/dimen_5dp"
             android:textStyle="bold"
             android:theme="@style/TextPrimary"  />
 
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="3"
-            android:layout_margin="2dp"
+            android:layout_margin="@dimen/dimen_2dp"
             android:contentDescription="@string/script_body_cd"
             android:text="@string/accused_of_continuing_to_track_users_movements_even_when_they_have_turned_off_their_location_history_google_is_being_sued_in_the_united_states_for_unauthorised_location_data_collection"
             android:theme="@style/TextPrimary" />
